frontend/test/should_fail/array_prod.grg
function prod(ref a:array<string>) : double
{
	return(a.prod());
}